[package]
name = "bomb-party-bot"
version = "0.1.0"
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
lazy_static = "1.4.0"
rand = "0.8.4"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10.8"
features = ["cache", "collector", "framework", "standard_framework", "rustls_backend"]
